--- a/foodtech/src/App.css
+++ b/foodtech/src/App.css
@@ -48,8 +48,8 @@
     height: 40px;
     cursor: pointer;
     padding: 10px; /* Add some padding for better appearance */
-    border: 2px solid black; /* Border color */
-    border-radius: 15px; /* Radius to make the corners rounded */
+    border: 1px solid black; /* Border color */
+    border-radius: 10px; /* Radius to make the corners rounded */
     outline: none; /* Remove the default outline */
     font-size: 16px; /* Adjust the font size */
     box-sizing: border-box;
@@ -68,6 +68,7 @@
     padding: 10px;
     img {
       width: 100%;
+      height: 150px;
     }
   }
 
@@ -75,8 +76,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    h3, h4 {
+    font-size: 14px;
+    h4, h5 {
       margin: 0;
+    }
+    .cuisine-name {
+      text-wrap: wrap;
+      text-overflow: ellipsis;
+      font-size: 12px;
     }
     .hotel-rating {
       display: flex;
