--- a/foodtech/src/App.css
+++ b/foodtech/src/App.css
@@ -24,30 +24,35 @@
 .nav-items > ul > li {
   padding: 0px 10px;
 }
-
-.serach-bar {
+.top-bar {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin:20px;
+  justify-content: space-between;
+  margin: 0 20px;
+  padding: 20px;
+  
+  .serach-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  .search-input {
-    margin: 0px 20px;
-    width: 350px;
-    height: 50px;
-    padding: 10px; /* Add some padding for better appearance */
-    border: 2px solid #ccc; /* Border color */
-    border-radius: 15px; /* Radius to make the corners rounded */
-    outline: none; /* Remove the default outline */
-    font-size: 16px; /* Adjust the font size */
-    box-sizing: border-box; 
+    .search-input {
+      margin: 0px 20px;
+      width: 350px;
+      height: 40px;
+      padding: 10px; /* Add some padding for better appearance */
+      border: 2px solid #ccc; /* Border color */
+      border-radius: 10px; /* Radius to make the corners rounded */
+      outline: none; /* Remove the default outline */
+      font-size: 16px; /* Adjust the font size */
+      box-sizing: border-box; 
+    }
   }
-
-  .search-btn {
+  .common-btn {
     width: 150px;
     height: 40px;
     cursor: pointer;
-    padding: 10px; /* Add some padding for better appearance */
+    margin: 0 10px; /* Add some padding for better appearance */
+    padding: 0 10px; /* Add some padding for better appearance */
     border: 1px solid black; /* Border color */
     border-radius: 10px; /* Radius to make the corners rounded */
     outline: none; /* Remove the default outline */
