--- a/foodtech/src/App.css
+++ b/foodtech/src/App.css
@@ -13,6 +13,7 @@
 }
 
 .nav-items {
+  display: flex;
   margin: 0 50px;
 }
 .nav-items > ul {
@@ -24,6 +25,7 @@
 .nav-items > ul > li {
   padding: 0px 10px;
 }
+
 .top-bar {
   display: flex;
   justify-content: space-between;
@@ -47,20 +49,62 @@
       box-sizing: border-box; 
     }
   }
-  .common-btn {
-    width: 150px;
-    height: 40px;
-    cursor: pointer;
-    margin: 0 10px; /* Add some padding for better appearance */
-    padding: 0 10px; /* Add some padding for better appearance */
-    border: 1px solid black; /* Border color */
-    border-radius: 10px; /* Radius to make the corners rounded */
-    outline: none; /* Remove the default outline */
-    font-size: 16px; /* Adjust the font size */
-    box-sizing: border-box;
-    
+}
+.common-btn {
+  width: 150px;
+  height: 40px;
+  cursor: pointer;
+  margin: 0 10px; /* Add some padding for better appearance */
+  padding: 0 10px; /* Add some padding for better appearance */
+  border: 1px solid black; /* Border color */
+  border-radius: 10px; /* Radius to make the corners rounded */
+  outline: none; /* Remove the default outline */
+  font-size: 16px; /* Adjust the font size */
+  box-sizing: border-box;  
+}
+
+.login-btn {
+  padding: 10px;
+}
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  .shimmer-card {
+    width: 200px;
+    height: 250px;
+    background-color: #f0f0f0;
+    margin: 10px;
+    padding: 10px;
+    .shimmer-img {
+      width: 100%;
+      height: 150px;
+    }
   }
 }
+
+.menu-container {
+  padding:20px;
+  .food-card {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 20px;
+    background-color: #f0f0f0;
+    border-radius: 10px; /* Radius to make the corners rounded */
+    outline: none; /* Remove the default outline */
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    img {
+      padding: 10px;
+      width: 200;
+      height: 150px;
+      padding-right: 20px;
+    }
+  
+  }
+}
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
@@ -68,9 +112,12 @@
   .res-card {
     width: 200px;
     height: 250px;
-    border: 1px solid black;
+    background-color: #f0f0f0;
     margin: 10px;
     padding: 10px;
+    border-radius: 10px; /* Radius to make the corners rounded */
+    outline: none; /* Remove the default outline */
+    cursor: pointer;
     img {
       width: 100%;
       height: 150px;
@@ -98,3 +145,6 @@
   }
 }
 
+.error-message {
+  color: red;
+}
