--- a/foodtech/src/App.css
+++ b/foodtech/src/App.css
@@ -64,7 +64,7 @@
 }
 
 .login-btn {
-  padding: 10px;
+  margin: 10px;
 }
 .shimmer-container {
   display: flex;
@@ -83,6 +83,20 @@
   }
 }
 
+.about-container {
+  padding: 20px;
+  .user-card {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 20px;
+    background-color: #f0f0f0;
+    border-radius: 10px; /* Radius to make the corners rounded */
+    outline: none; /* Remove the default outline */
+    cursor: pointer;
+    padding: 20px;
+  }
+}
+
 .menu-container {
   padding:20px;
   .food-card {
@@ -95,11 +109,20 @@
     cursor: pointer;
     display: flex;
     justify-content: space-between;
-    img {
+    .food-right-cont {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 10px;
-      width: 200;
-      height: 150px;
-      padding-right: 20px;
+      img {
+        width: 230;
+        height: 140px;
+        padding-bottom: 10px;
+      }
+      .add-to-cart {
+        width: 100px;
+        height:50px;
+      }
     }
   
   }
