--- a/foodtech/src/App.css
+++ b/foodtech/src/App.css
@@ -63,9 +63,6 @@
   box-sizing: border-box;  
 }
 
-.login-btn {
-  margin: 10px;
-}
 .shimmer-container {
   display: flex;
   flex-wrap: wrap;
@@ -87,13 +84,17 @@
   padding: 20px;
   .user-card {
     width: 100%;
-    height: 100px;
-    margin-bottom: 20px;
+    height: 200px;
     background-color: #f0f0f0;
     border-radius: 10px; /* Radius to make the corners rounded */
     outline: none; /* Remove the default outline */
     cursor: pointer;
-    padding: 20px;
+    padding: 10px;
+    margin-bottom: 20px;
+    img {
+      width: 120px;
+      height: 120px;
+    }
   }
 }
 
@@ -146,12 +147,26 @@
       height: 150px;
     }
   }
-
+  .highly-rated {
+    position: absolute;
+    background-color: black;
+    top: 20px;
+    left: 30px;
+    padding: 5px;
+    color: white;
+    border-radius: 10px; /* Radius to make the corners rounded */
+    outline: none; /* Remove the default outline */
+    
+  }
+  
   .hotel-details {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-size: 14px;
+    .hotel-name {
+      align-items: center;
+    }
     h4, h5 {
       margin: 0;
     }
@@ -170,4 +185,14 @@
 
 .error-message {
   color: red;
+}
+.btn-container {
+  margin: 10px;
+  .online-btn {
+    background-color: green;
+  }
+  
+  .offline-btn {
+    background-color: red;
+  }
 }
